2000-08-20  Tim Jenness  <timj@jach.hawaii.edu>

	* LaTeX.pm (add_item): Handle long item strings (from  Mark
	A. Hershberger <mah@everybody.org>)
	(_replace_special_chars): Escape ~ (from Simon Cozens
	<simon@@cozens.net>)
	Escape | (thanks to Marcel Grunauer <marcel@codewerk.com>)
	Add support for E<verbar> and E<sol>

	
2000-05-15  Tim Jenness  <timj@jach.hawaii.edu>

	* V0.52 for CPAN release 

2000-05-09  Tim Jenness  <timj@jach.hawaii.edu>

	* pod2latex: Make sure that argument order is preserved.

2000-05-08  Tim Jenness  <timj@jach.hawaii.edu>

	* LaTeX.pm: Version 0.51

2000-05-05  Tim Jenness  <timj@jach.hawaii.edu>

	* pod2latex: Set INFILE name when using filehandle.

	* LaTeX.pm: Fix warning messages so that they correctly list file
	name and line number. Fix escaping of ^ and {}.

2000-03-30  Tim Jenness  <timj@jach.hawaii.edu>

	* LaTeX.pm: Version 0.50
